# ComfyUI-FishAudioS2

./: README.md  README_ZH.md  __init__.py  install.py  pyproject.toml  quantize_fp8.py  requirements.txt
example_workflow/: fish_audio_s2_Longform.json
fish_speech_src/fish_speech/inference_engine/: __init__.py
fish_speech_src/fish_speech/models/text2semantic/: inference.py  llama.py  vbar_offload.py
fish_speech_src/fish_speech/utils/: schema.py
nodes/: loader.py  longform_node.py  model_cache.py  multi_speaker_node.py  tts_node.py  utils.py  voice_clone_node.py
