[project]
name = "ComfyUI-fish-audio-s2"
description = "ComfyUI custom nodes for Fish Audio S2-Pro TTS — voice clone, multi-speaker, and text-to-speech"
version = "0.2.1"
license = {file = "LICENSE"}
dependencies = [
    "soundfile",
    "loguru",
    "transformers",
    "einops",
    "librosa",
    "rich",
    "ormsgpack",
    "pydantic",
    "tiktoken",
    "cachetools",
    "zstandard",
    "resampy",
    "protobuf",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-FishAudioS2"

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "Fish Audio S2 TTS"
Icon = "https://avatars.githubusercontent.com/u/84208527"
