[project]
name = "ComfyUI-fish-audio-s2"
description = "ComfyUI custom nodes for Fish Audio S2-Pro TTS | voice clone, multi-speaker, and text-to-speech"
version = "0.3.0"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "tqdm",
    "soundfile",
    "loguru",
    "transformers",
    "einops",
    "einx[torch]",
    "librosa",
    "rich",
    "ormsgpack",
    "pydantic",
    "tiktoken",
    "cachetools",
    "zstandard",
    "resampy",
    "safetensors",
    "pyrootutils",
    "natsort",
    "loralib",
    "hydra-core",
    "bitsandbytes",
    # descript-audio-codec and descript-audiotools are intentionally excluded.
    # They are auto-installed at startup with --no-deps to avoid their
    # protobuf<5 constraint conflicting with shared ComfyUI environments.
    # protobuf is also excluded — it is only used by training tooling,
    # not by TTS inference.
]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-FishAudioS2"

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "Fish Audio S2 TTS"
Icon = "https://avatars.githubusercontent.com/u/84208527"
